--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "css-loader": "^5.0.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^3.2.0",
         "path": "^0.12.7",
         "style-loader": "^2.0.0",
