--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     },
     "dependencies": {
         "@babel/plugin-transform-runtime": "^7.16.4",
+        "@ckeditor/ckeditor5-build-classic": "^31.0.0",
+        "@ckeditor/ckeditor5-react": "^3.0.3",
         "antd": "^3.24.3",
         "config": "^3.3.6",
         "dateformat": "^5.0.2",
         "history": "^4.10.1",
+        "html-react-parser": "^1.4.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-select": "^5.2.1",
