--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-loader-spinner": "^4.0.0",
+        "react-promise-tracker": "^2.1.0",
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
